--- a/1-screening.tex
+++ b/1-screening.tex
@@ -13,23 +13,24 @@
 \subsubsection{Adsorption isotherms and geometrical descriptors}
 
 %General introduction
-Nanoporous materials are defined as materials with a nanoscale structure constituted by pores and cavities, which some are connected by a network of channels. These pores can be empty or filled with a variety of substances called adsorbates. By adhering molecules from a liquid or gas phase into the internal surfaces of the material, we can use it in diverse applications such as gas separation and purification,\autocite{Li_2009,Lagorsse_2007} energy storage and conversion,\autocite{Morris_2008,Qiu_2020} heterogeneous catalysis\autocite{Bell_2003,Singh_2019,Pascanu_2019} drug delivery,\autocite{Della_Rocca_2011,Bernini_2014} or sensing.\autocite{Breslin_1976} By designing the chemical nature, size, shape and distribution of the pores, we can tailor the physicochemical properties to the targeted application.\autocite{Yan_2020}
+Nanoporous materials are defined as materials with a nanoscale structure constituted by pores and cavities, some of which are connected by a network of channels. These pores can be empty or filled with a variety of substances called adsorbates. By attaching molecules from a liquid or gas phase onto the internal surface of the material, we can use it in diverse applications such as gas separation and purification,\autocite{Li_2009,Lagorsse_2007} energy storage and conversion,\autocite{Morris_2008,Qiu_2020} heterogeneous catalysis\autocite{Bell_2003,Singh_2019,Pascanu_2019} drug delivery,\autocite{Della_Rocca_2011,Bernini_2014} or sensing.\autocite{Breslin_1976} By designing the chemical nature, size, shape and distribution of the pores, we can tailor the physicochemical properties to the targeted application.\autocite{Yan_2020}
 
 %adsorption
-The process of adhering particles or molecules on surfaces is called adsorption. Adsorption occurs due to attractive forces between adsorbates and the adsorbent surface, such as van der Waals forces, hydrogen bonding, and electrostatic interactions. The adsorption performance depends on the chemical nature of the interface, its exposed surface area and the shape of the pores. We usually characterize adsorption properties of an adsorbate compound by measuring the numbers of adsorbed molecules as a function of its pressure at a given temperature, which is called the adsorption isotherm. These isotherms can possibly be used, among other techniques, to specify the pore size distribution, accessible surface area and pore volume.\autocite{Rouquerol_1994} By using fitting models, we can also use adsorption isotherms to characterize the maximum adsorption uptake among other adsorption descriptors.\autocite{Wang_2020} Using a set of experimental isotherms at close but different temperatures, we can also retrieve information on the isosteric heat of adsorption $q_{st}$ (the negative differential of the excess enthalpy of adsorption with respect to the excess adsorption).\autocite{Nicholson2000} This heat of adsorption (related to the enthalpy of adsorption) can also be directly obtained using calorimetry.\autocite{Dunne_1996} Furthermore measurements at infinite dilution can also lead to a linear relation between the adsorbed quantity and the pressure defined by the Henry's law; another key adsorption descriptor, the Henry adsorption constant, is defined as the slope of this linear regime.\autocite{Finsy2007} All of these thermodynamic quantities are most valuable in comparing experimental data to computational modeling to compare and characterize the materials suitable for a given gas adsorption process.
+The process of sticking particles or molecules on a surface is called adsorption. Adsorption occurs due to attractive forces between adsorbates and the adsorbent surface, such as van der Waals forces, hydrogen bonding, and electrostatic interactions. The adsorption performance depends on the chemical nature of the interface, its exposed surface area and the shape of the pores. We usually characterize adsorption properties of an adsorbate compound by measuring the numbers of adsorbed molecules as a function of its pressure at a given temperature, which is called the adsorption isotherm\todo{ref to iotherm example}. These isotherms can possibly be used, among other techniques, to determine the pore size distribution, accessible surface area and pore volume.\autocite{Rouquerol_1994} By using fitting models, we can also use adsorption isotherms to characterize the maximum adsorption uptake, among other adsorption descriptors.\autocite{Wang_2020} Using a set of experimental isotherms at close but different temperatures, we can also retrieve information on the isosteric heat of adsorption $q_{st}$ (the negative differential of the excess enthalpy of adsorption with respect to the excess adsorption).\autocite{Nicholson2000} This heat of adsorption (related to the enthalpy of adsorption) can also be directly obtained using calorimetry.\autocite{Dunne_1996} Furthermore measurements at infinite dilution can also lead to a relation between the adsorbed quantity and the pressure defined by the Henry's law; another key adsorption descriptor, the Henry adsorption constant, is defined as the slope of this linear regime.\autocite{Finsy2007} Although all of these thermodynamic quantities do not give a complete picture of the adsorption process like an adsorption isotherm would, they are most valuable in comparing experimental data to computational models to rapidly characterize the materials suitable for a target gas adsorption process.
 
+\todo{Illustration of adsorption isotherm}
 
 %pore size
-Most of the materials studied in this thesis will have pores with a size around the nanometer called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\autocite{Sing_1985} Here, I will use a single terminology (nanopore) to designate all pores of under a few nanometers. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\autocite{Yan_2020} The pore size distribution (PSD) can be computationally determined if the structure of the nanoporous material is already resolved using X-ray diffraction on crystallized porous solids. This is the most accurate determination method of the PSD, but it relies on considering that the structure is perfectly rigid and crystalline so that only one structural data can characterize it. Other experimental methods rely on assumptions, model systems (e.g., cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can evaluate the PSD.\autocite{Haynes_1973} The Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\autocite{Radlinski_2004} In this thesis, I will mainly rely on computationally analyzing X-ray resolved structures to deduce pore sizes and other geometrical characteristics. 
+Most of the materials studied during my thesis have pores with a size around the nanometer, therefore called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\autocite{Sing_1985} Here, I will use a single terminology (nanopore) to designate all pores of under a few nanometers. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\autocite{Yan_2020} The pore size distribution (PSD) can be computationally determined if the structure of the nanoporous material is already resolved using X-ray diffraction on crystallized porous solids. This is the most accurate determination method of the PSD, but it relies on considering that the structure is perfectly rigid and crystalline so that only one structural data can characterize it. Other experimental methods rely on assumptions, model systems (e.g., cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can evaluate the PSD.\autocite{Haynes_1973} The Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\autocite{Radlinski_2004} In my thesis, I will mainly rely on computationally analyzing experimental structures resolved by X-ray to deduce pore sizes and other geometrical characteristics. 
 
 %volume / porosity
-The pore volume consists in the measure of the volume of ``closed'' and ``open'' pores of nanoporous materials. Depending on the way of measuring it, different quantities are probed. Some pores could not be accessed by some adsorbate; depending on the probe size the volume calculated will not be the same. Methods that do not rely on adsorption like scattering or stereology will, however, measure the total pore volume. The porosity or void fraction would be defined as the ratio between the pore volume and the apparent framework volume. Depending on the method, we can retrieve either the total porosity, the porosity opened or closed to a given probe adsorbate. 
+The pore volume corresponds to the volume of the ``closed'' and ``open'' pores of nanoporous materials. Depending on the way of measuring it, different quantities are probed. Some pores are not accessible by a specific adsorbate; depending on the probe size, the volume calculated will not be the same. Methods that do not rely on adsorption like scattering or stereology techniques can only measure the total pore volume. The porosity or void fraction would be defined as the ratio between the pore volume and the apparent framework volume. Depending on the method, we can retrieve either the total porosity, the porosity opened or closed to a given probe or adsorbate. 
 
 
 %Definitions of surface area, porosity etc. Values depend on the method to extract them. A word on computational characterization (will be developed later)
 The cavities of the nanoporous material lay out an incredibly large adsorbable surface area, which is extremely useful in increasing the number of molecules in a given volume or mass of material, several thousands of square meters can be found in a gram of some nanoporous materials.\autocite{Farha_2012} The higher the surface area, the more molecules can be adsorbed for storage, separation or reaction purposes; it is therefore crucial to measure this surface area using experimental and computational methods. The most extensively used method to experimentally measure surface areas from adsorption isotherms is based on the Brunauer–Emmett–Teller (BET) theory.\autocite{Detsi_2011} Most BET areas are calculated on \ce{N2} isotherm at its boiling temperature (\SI{77}{\kelvin}); although different probe adsorbates can be considered, they are not standard.\autocite{Tian_2017} However, the definition of the surface area depends highly on the condition of measurement but also on the fitting methodology; a dozen isotherms were given to 61 labs for BET area calculation, and the statistical experiment yielded to a high level of disparities in the calculation.\autocite{Osterrieth_2022} 
 
-Beyond the experimental techniques, some software like Zeo++ or PoreBlazer focus on computing pore size distributions, surface areas and void fractions using well-defined structure files.\autocite{Zeo++,PoreBlazer} The definition of these values also depends on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values do not rely on adsorption models or on isotherm data as in the BET area, they are now relying on more comprehensive structural data. They, however, very much rely on a well-designed definition of the volume, the surface and the pore size we want to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate we consider.\autocite{Hung_2021}. In this thesis, we will rely on these computational methods to define these geometrical descriptors of nanoporous materials.
+Beyond the experimental techniques, some software like Zeo++ or PoreBlazer focus on computing pore size distributions, surface areas and void fractions based on well-defined structure files.\autocite{Zeo++,PoreBlazer} The definition of these values also depends on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values do not rely on adsorption models or on isotherm data as in the BET area, they are now relying on more comprehensive structural data. They, however, very much rely on a well-designed definition of the volume, the surface and the pore size we want to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate we consider.\autocite{Hung_2021}. In this thesis, we will rely on these computational methods to define geometrical descriptors of nanoporous materials.
 
 \subsubsection{Classes of nanoporous materials}
 
@@ -42,7 +43,7 @@ Beyond the experimental techniques, some software like Zeo++ or PoreBlazer focus
 \end{figure}
 
 %Material classification crystalline / amorphous
-Nanoporous materials can have different degrees of crystallinity from perfectly crystalline to completely amorphous. Most of the computational work is focused on crystalline structures, since the atoms are well described within a periodic framework, which enables faster simulations. The presence of defects is also usually neglected, which could explain some discrepancies between simulations and experiments. And amorphous materials are described by thousands of atomic positions in order to grasp their intrinsic non-periodicity.\autocite{Thyagarajan_2020} Activated carbons, a famous class of amorphous material, are extensively used in the industry for gas purification, but cannot be rationally studied to characterize their adsorption properties. One can distinguish roughly three main classes of crystalline nanoporous materials: the inorganic materials like zeolites (aluminosilicates or aluminophosphates), the organic materials like the porous polymer networks (PPNs) or the covalent organic frameworks (COFs) and the metal--organic frameworks (MOFs).
+Nanoporous materials can have different degrees of crystallinity, from perfectly crystalline to completely amorphous. Most of the computational work is focused on crystalline structures, since the atoms are well described within a periodic framework, which enables faster simulations. The presence of defects is also usually neglected, which can explain some discrepancies between simulations and experiments. And amorphous materials are described by thousands of atomic positions in order to grasp their intrinsic non-periodicity.\autocite{Thyagarajan_2020} Activated carbons, a famous class of amorphous material, are extensively used in the industry for gas purification, but cannot be rationally studied to characterize their adsorption properties. One can distinguish roughly three main classes of crystalline nanoporous materials: inorganic materials like zeolites (aluminosilicates or aluminophosphates), organic materials like porous polymer networks (PPNs) or covalent organic frameworks (COFs), and metal--organic frameworks (MOFs).
 
 Zeolites are naturally occurring nanoporous aluminosilicate materials that are commonly synthesized to be used in the industry as a commercial adsorbent and heterogeneous catalyst.\autocite{Ozin_1989,Ma_2000} It is considered as one of the most mature nanoporous material technology at our disposal. This class of material also leaves a wide room for innovation since different Al/Si ratios of a same zeolite type pan out a wide range of structures. Furthermore, zeolite materials inspired the synthesis of zeolitic frameworks harboring different atoms such as the aluminophosphates or the zeolitic imidazolate frameworks.\autocite{Wang_2012,Chen_2014_zeo} 
 
@@ -51,7 +52,7 @@ Porous polymer networks (PPNs) are porous materials based on the already very de
 Metal--organic frameworks (MOFs) are a class of nanoporous materials formed by metallic centers connected with organic linkers to form a stable crystalline solid. Even if the first synthesis of such a material was done since the early 90s,\autocite{Abrahams_1991} and brought about a sparking interest in the scientific community a couple of decades later.\autocite{Kuppler_2009,Furukawa_2013} Because plenty of combinations of linkers and metals are imaginable, an infinite amount of MOFs could theoretically be designed. Their structure can be tuned to our needs to enhance their performance in the targeted application.\autocite{Ejsmont_2021} This diversity of nanoporous materials offer a wide range of potential candidates that could be evaluated for any targeted applications. 
 
 
-\subsection{Computational databases}
+\subsection{Databases of nanoporous materials}
 
 All the previously described materials have been either synthesized and resolved using X-ray crystallography or computationally constructed. By combining almost all possible nanoporous materials, almost a million structures have been considered for separation or storage applications.\autocite{Simon_2015,Simon_2015_EES,Thornton_2017} This extended database can be broken down into the synthesized materials and hypothetical ones for all the above-mentioned classes of material.
 
@@ -83,6 +84,7 @@ To overcome these new challenges, people are looking increasingly towards transf
 
 \section{Review of Screening Methodologies}
 
+\todo{Intro and specify that this review of the state-of-the art has been published.\autocite{Ren_2022}}
 
 \subsection{Non-adsorption properties}
 
@@ -251,7 +253,7 @@ After this quick overview of the different screening studies in the field of xen
 
 \section{Separation of Xenon from Krypton}
 
-In this section, we will try to see how we can apply the above-mentioned screening methodologies to help us understand the origins of the Xe/Kr separation and identify promising materials for industrial applications. 
+In this section, I will show how the above-mentioned screening methodologies can help us understand the origins of the Xe/Kr separation and identify promising materials for industrial applications. 
 
 \subsection{Industrial applications}\label{sct:industrial}
 
@@ -260,20 +262,21 @@ The industrial interest for noble gases lies first in the many applications atta
 
 \setlength{\extrarowheight}{0.1cm}
 \begin{table}[ht]
-\begin{tabular}{|l|r|}
-\hline
- Industrial application  &  Xe/Kr composition  \\
-\hline
- Extraction from ambient air\autocite{kerry2007industrial} &  20/80  \\[0.5mm]
- Spent nuclear fuel\autocite{auerbach2003handbook} &  90/10  \\[0.5mm]
- Molten Salt Reactor\autocite{Riley_2019} &  ? \\[0.5mm]
-\hline
+\centering
+\begin{tabular}{|l|c|}
+  \hline
+  Industrial application  &  Xe/Kr composition  \\
+  \hline
+  Extraction from ambient air\autocite{kerry2007industrial} &  20/80  \\[0.5mm]
+  Spent nuclear fuel\autocite{auerbach2003handbook} &  90/10  \\[0.5mm]
+  Molten salt reactor\autocite{Riley_2019} &  unknown \\[0.5mm]
+  \hline
 \end{tabular}
 \caption{Composition of the Xe/Kr mixture in different applications.}
 \label{tab:indus_app}
 \end{table}
 
-The role of a dispatchable source of low-carbon energy can only be fulfilled by batteries charged by renewable energies (wind or solar) or by nuclear plants. However, one of the major criticisms on this source of energy concerns the management of the radioactive waste. As promising technologies in gas separation emerge, there is an increasing need for a solution for the release of very small amount of radioactive off-gases like Kr\e{85} from nuclear spent fuels.\autocite{Blomeke_1969} Furthermore, stable xenon isotopes are also produced in these spent nuclear fuels, which can be used in all the above-mentioned applications. In the context of a regained interest in nuclear energy, the fourth generation nuclear plants are projected to be built on other technologies such as the light water or the molten salt technologies.\autocite{LeBlanc_2010} Molten salt reactors would continuously produce xenon and radioactive krypton in the electricity generation process.\autocite{Riley_2019} The development of gas separation units in these facilities would represent a promising source for xenon production. Yet, we can laboriously imagine deploying standard cryogenic distillation units in a nuclear facility for obvious security reasons. Consequently, nanoporous materials are considered as the alternative technology for xenon/krypton separation. Zeolites are already used as a pre-purification system,\autocite{kerry2007industrial} and they are now projected to be used as a standalone separation system. 
+The role of a dispatchable source of low-carbon energy can only be fulfilled by batteries charged by renewable energies (wind or solar) or by nuclear plants. However, one of the major criticisms of this source of energy concerns the management of the radioactive waste. As promising technologies in gas separation emerge, there is an increasing need for a solution for the release of very small amount of radioactive off-gases like Kr\e{85} from nuclear spent fuels.\autocite{Blomeke_1969} Furthermore, stable xenon isotopes are also produced in these spent nuclear fuels, which can be used in all the above-mentioned applications. In the context of a regained interest in nuclear energy, the fourth generation nuclear plants are projected to be built on other technologies such as the light water or the molten salt technologies.\autocite{LeBlanc_2010} Molten salt reactors would continuously produce xenon and radioactive krypton in the electricity generation process.\autocite{Riley_2019} The development of gas separation units in these facilities would represent a promising source for xenon production. Yet, we can laboriously imagine deploying standard cryogenic distillation units in a nuclear facility for obvious security reasons. Consequently, nanoporous materials are considered as the alternative technology for xenon/krypton separation. Zeolites are already used as a pre-purification system,\autocite{kerry2007industrial} and they are now projected to be used as a standalone separation system. 
 
 \begin{figure}[ht]
   \includegraphics[width=0.42\textwidth]{figures/1-screening/Kr_treatment.jpg}
@@ -294,11 +297,11 @@ More recently, Li et al.\ proposed a rigid squarate-based MOF with ``perfect por
 
 \subsection{From the computer to the test tube}
 
-To connect back our study to computational screenings, we are now going to present one of the rare cases of direct contribution of high-throughput screenings to the lab testing of a material. In 2015, Simon et al.\autocite{Simon_2015} analyzed the Nanoporous Materials Genome,\autocite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. This study led to the rediscovery of SBMOF-1, a promising nanoporous material that was presented one year later.\autocite{Banerjee_2016}
+To connect back this work to computational screenings, I am now going to present one of the rare cases of direct contribution of high-throughput screenings to the lab testing of a material. In 2015, Simon et al.\autocite{Simon_2015} analyzed the Nanoporous Materials Genome,\autocite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. This study led to the rediscovery of SBMOF-1, a promising nanoporous material that was presented one year later.\autocite{Banerjee_2016}
 
 It is possibly the largest-scale study performed in this area, both by the sheer number of frameworks involved and by the diversity of their nature. Because such a set is too big for brute-force screening with GCMC simulations, they proposed a multiscale modeling strategy combining machine learning algorithms (trained on a diverse subset of 15,000 materials) with molecular simulations (used both to generate the ML training data, and to refine the separation properties for the top performers obtained by the ML predictor). Without going into details (see Fig.~\ref{fgr:Simon} for more details), the ML model they trained was mainly based on geometric structural descriptors, with the addition of a single energy-based descriptor: the Voronoi energy\ (i.e.,\ the average energy\ of a xenon atom at the accessible nodes in the Voronoi partition of space). In addition to identifying and describing some top performing materials, the authors also analyzed the correlations between high Xe/Kr selectivity and the geometric properties of the frameworks, in order to ``rationalize the strong link between pore size and selectivity''. In particular, by developing theoretical pore models of spherical and cylindrical geometries, they could highlight the general geometrical trends observed, but also the fact that there is a wide diversity of performance beyond the geometrical features of the frameworks, which suggests the key role of the chemical nature of the cavities.
 
-By looking at the distribution of the most selective materials ($s\geq 14$) compared to the less selective ones ($s<14$) in the Figure~\ref{fgr:Simon2015}, Simon et al.\ established a first profile of the selective materials. These materials have pore sizes of a specific diameter very close to the kinetic diameter of xenon around \SI{4.4}{\angstrom} depending on how it is defined. They have rather low surface areas and porosities (void fractions) unlike what we would normally expect since the adsorbable surface is a key reason for using nanoporous materials in adsorption applications. This behavior can be rationalized by the fact that small pores of the order of a few \si{\angstrom} drives mechanically to smaller pore volumes and surface areas (the framework atoms have more space). The crystal density is therefore also a bit higher for these reasons. Moreover, the pore's shape is also a crucial factor since a shape closer to a sphere would interact with the xenon with more atoms, hence increasing its affinity and the selectivity. Finally, last but not least, the Voronoi energy described the physical nature of the binding between the xenon and the pore atoms, the more negative it is and the more selective the material will be. To wrap up, the ideal materials have a pseudo-spherical shape (a complete sphere would stop the diffusion of the adsorbates) with a size close to the diameter of a xenon which is rather dense and not very porous.
+By looking at the distribution of the most selective materials ($s\geq 14$) compared to the less selective ones ($s<14$) in the Figure~\ref{fgr:Simon2015}, Simon et al.\ established a first profile of the selective materials. These materials have pore sizes of a specific diameter very close to the kinetic diameter of xenon around \SI{4.4}{\angstrom} depending on how it is defined. They have rather low surface areas and porosities (void fractions), unlike what we would normally expect since the adsorbable surface is a key reason for using nanoporous materials in adsorption applications. This behavior can be rationalized by the fact that small pores of the order of a few \si{\angstrom} immediately imply smaller pore volumes and surface areas since the framework atoms occupy much more space. The crystal density is therefore also a bit higher for these reasons. Moreover, the pore's shape is also a crucial factor since a shape closer to a sphere would interact with the xenon with more atoms, hence increasing its affinity and the selectivity. Finally, last but not least, the Voronoi energy described the physical nature of the binding between the xenon and the pore atoms, the more negative it is and the more selective the material will be. To wrap up, the ideal materials have a pseudo-spherical shape (a complete sphere would stop the diffusion of the adsorbates) with a size close to the diameter of a xenon which is rather dense and not very porous.
 
 \begin{figure}[ht]
 \centering
@@ -315,20 +318,23 @@ The chemical nature of the cavities was best described using the Voronoi energy 
 Despite the progress made, important drawbacks of the current methodologies remain. High-throughput screenings rely too much on oversimplified assumptions such as the rigidity of the framework, the absence of defects, the use of Lennard-Jones potentials and inaccurate charges. For instance, the rigidity of the framework only takes into account one conformation of the framework. Yet, thermal agitation induces a ``breathing'' movement of the framework with an amplitude dependent on its intrinsic flexibility. The pores of the framework can change depending on the number of adsorbates to interact more optimally with them, which can be induced by a change in pressure. The issue of flexibility is rarely tackled, and when considered, it is only on the few most selective structures given by an inaccurate screening based on the rigid crystal approximation. One can wonder about the results obtained if it is applied to larger sets of structures. Witman et al.\ found that flexibility applied to top performing materials can decrease the selectivity, because the pore does not have an optimal size anymore.\autocite{Witman_2017} In some cases, the selectivity of a well-performing material can even increase to become a top performing one. Computational screenings can be closer to predict experimental values of selectivity, diffusivity, and other key performance metrics.
 
 %Diffusion
-Many open problems remain for the design of efficient high-throughput computational screenings. The connection between different properties for a given application is not systematically integrated in the screening procedures. For example, in methane storage, the working capacity of the material is the main property to optimize, but the kinetics of the adsorption/desorption or the mechanical resistance to compaction among others also need to be considered. Designing a nanoporous material is in fact a multivariate optimization problem with tacit constraints, for example the {synthesizability}. For instance, the diffusion coefficients of adsorbates in a xenon/krypton separation problem can help us better understand the breakthrough simulations and eventually the whole separation process in pressure or temperature swing adsorption beds. For this reason, studying transport properties along with uptake capacities and thermodynamic selectivity of the xenon/krypton separation can give a more complete picture of the industrial process we ultimately want to model. 
+Many open problems remain for the design of efficient high-throughput computational screenings. The connection between different properties for a given application is not systematically integrated in the screening procedures. For example, in methane storage, the working capacity of the material is the main property to optimize, but the kinetics of the adsorption/desorption or the mechanical resistance to compaction among others also need to be considered. Designing a nanoporous material is in fact a multivariate optimization problem with tacit constraints (e.g. synthesizability) --- a material for industrial xenon/krypton separation we need not only to optimize the selectivity but also the regenerability (how much gas can be retrieved at each cycle) and the capacity and so on, and the a key constraint is to know if it is synthesizable or the robustness within the industrial conditions. For instance, although the transport properties of the adsorbates in the material are not key in explaning the separation performance, they are, however, very important in the breakthrough experiments and eventually in the industrial separation process in pressure or temperature swing adsorption beds. For this reason, studying transport properties along with uptake capacities and thermodynamic selectivity of the xenon/krypton separation can give a more complete picture of the industrial process we ultimately want to model. 
 
 %Polarization
 Moreover, the transferability of the methodology to a broad range of materials is often achieved at the expense of accuracy in specific cases. And one can rightly question the universality of depending on faster but less elaborated models, which boils down to a trade-off problem between prediction accuracy and computational cost (or complexity). For instance, classical forcefields are broadly used in rigid materials for adsorption properties, but the switch to more costly \emph{ab initio} methods or the addition of flexibility can result in a more accurate description at the expense of computational resources. The addition of polarization could be very promising since several top performing materials harbor open metal sites and highly polar sites that explain the acute affinity to xenon adsorbates. 
 
 % ML
-The development of ML-assisted screenings is paired with the advances in data science techniques and algorithms. Recent advances in deep learning have enabled the development of transformer-based (the technology at the foundation of ChatGPT) machine learning models to predict adsorption properties.\autocite{Kang_2023,Cao_2023} More importantly, the construction of descriptors tailored to the many possible applications is also an ongoing work. This construction work cannot be dissociated to the physical and chemical intuition of the scientists. Topological, chemical, electronic and other descriptors have been developed on top of the more common geometrical and thermodynamic descriptors, which displays the importance of strong physical chemistry knowledge. Recently Shi et al.\ highlighted the key role of energy histograms in predicting adsorption properties.\autocite{Shi_2023}
+The development of ML-assisted screenings is paired with the advances in data science techniques and algorithms. Recent advances in deep learning have enabled the development of transformer-based (the technology at the foundation of ChatGPT) machine learning models to predict adsorption properties.\autocite{Kang_2023,Cao_2023} More importantly, the construction of descriptors tailored to the many possible applications is also an ongoing work. This construction work cannot be dissociated from the physical and chemical intuition of the scientists. Topological, chemical, electronic and other descriptors have been developed on top of the more common geometrical and thermodynamic descriptors, which displays the importance of strong physical chemistry knowledge. Recently Shi et al.\ highlighted the key role of energy histograms in predicting adsorption properties.\autocite{Shi_2023}
 The discovery of novel relevant descriptors remains the main lever for increased performance of the ML models and is closely related to a rigorous theoretical work.
-For these reasons, we worked during this thesis on more accurate and faster ways of calculating these interaction energies to extract valuable energy/thermodynamic descriptors.
+For these reasons, I worked during this thesis on more accurate and faster ways of calculating these interaction energies to extract valuable energy/thermodynamic descriptors.
 
 
 The development of databases is another key aspect in the promotion of data science in the field of materials science in general, and nanoporous materials chemistry in particular. The diversity of materials, the inclusion of experimental data (successful or failed), the addition of understudied classes of materials (e.g.,\ amorphous) are all key aspects to upgrade the existing database. Even if existing attempts to create a centralized database have been initiated by the materials project,\autocite{MaterialsProject} this database does not contain all the existing information on each material. Furthermore, this high amount of data will need to be efficiently explored, and non-supervise deep learning algorithms have been developed to do so.\autocite{Park_2023} Coupled with synthesis robot, these methods can navigate through the unexplored databases to find the few most interesting candidates for a given targeted application.
 
 In the future, computational high-throughput screening could be integrated more tightly into the design process of nanoporous materials, hence further improving its efficiency. The computational prescreening can be coupled with automated screenings of the most promising materials to finally identify candidates for further studies. This automated design process is described by Lyu et al.\ in their paper on ``Digital Reticular Chemistry'' and set out promising perspectives for computational screenings in the field.\autocite{Lyu_2020} Some studies are already pioneering this new research area by combining high-throughput characterizations, active learning algorithms and robotic synthesis.\autocite{Greenaway_2018,Moosavi_2019} Another step towards faster industrialization would integrate process modeling to enrich the purely atomistic approach.
+
+Considering all the above-mentioned 
+\todo{Conclusion générale du chapitre qui relie au prochian chapitre. Annonce des chapitres 2, 3, 4, 5.}
 
 \OnlyInSubfile{\printglobalbibliography}
 
