--- a/1-screening.tex
+++ b/1-screening.tex
@@ -333,8 +333,7 @@ The development of databases is another key aspect in the promotion of data scie
 
 In the future, computational high-throughput screening could be integrated more tightly into the design process of nanoporous materials, hence further improving its efficiency. The computational prescreening can be coupled with automated screenings of the most promising materials to finally identify candidates for further studies. This automated design process is described by Lyu et al.\ in their paper on ``Digital Reticular Chemistry'' and set out promising perspectives for computational screenings in the field.\autocite{Lyu_2020} Some studies are already pioneering this new research area by combining high-throughput characterizations, active learning algorithms and robotic synthesis.\autocite{Greenaway_2018,Moosavi_2019} Another step towards faster industrialization would integrate process modeling to enrich the purely atomistic approach.
 
-Considering all the above-mentioned 
-\todo{Conclusion générale du chapitre qui relie au prochian chapitre. Annonce des chapitres 2, 3, 4, 5.}
+Considering all the results gathered from the literature,\todo{Relier en parlant du début} the next chapter will aim at better understanding the microscopic origins of the xenon/krypton separation in nanoporous materials through a thermodynamics-driven screening. This study will include the study of relationships between the separation performance and geometrical characteristics of the structures, the identification of the thermodynamic nature of the separation. This study will, for instance, unravel some interesting effect of the pressure on the selectivity and these effects will help us accelerate the evaluation of the selectivity at any pressure values.
 
 \OnlyInSubfile{\printglobalbibliography}
 
